--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h3>Hello Git!!!!!!!!!!!!!</h3>
     <h4>Hello Git!!!!!!!!!!!!!</h4>
     <h5>Hello Git!!!!!!!!!!!!!</h5>
+    <h5>Hello Git!!!!!!!!!!!!!</h5>
+    <h6>Hello Git!</h6>
   </body>
   <script src="script.js"></script>
 </html>
